--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./postratlogo.png" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="./ratdojologo.png"
+      sizes="16x16"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Insight Gateway</title>
+    <title>Third Space</title>
   </head>
   <body>
     <div id="app"></div>
