--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       sizes="16x16"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Third Space</title>
+    <title>Portal</title>
   </head>
   <body>
     <div id="app"></div>
